fix: comment editor width is too wide

--- a/src/Heex/heex.scss
+++ b/src/Heex/heex.scss
@@ -88,7 +88,6 @@
     }
     .right {
         height: 100%;
-        flex-shrink: 0;
         flex-grow: 1;
 
         .heex-editor-header {
